# bitbucket-mcp

./: .env.example  .gitignore  Makefile  README.md  RUNBOOK.md  agents.md  bitbucket-pipelines.yml  pyproject.toml
docs/adr/: 001-bitbucket-mcp-server.md  002-local-dg-workflow-tools.md
src/bitbucket_mcp/: auth.py  server.py
tests/unit/: conftest.py  test_auth.py  test_server.py
