[project]
name = "mini-bitbucket-mcp"
version = "0.2.0"
description = "Bitbucket MCP server for Claude Code and AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "bitbucket-sdk>=0.1.0",
]

[project.scripts]
mini-bitbucket-mcp = "bitbucket_mcp.server:main"
bitbucket-mcp-server = "bitbucket_mcp.server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C90", "SIM", "PL", "RUF"]
ignore = [
    "S101",    # allow assert in tests
    "PLR0913", # MCP tool signatures map directly to API params; many args are expected
]
